Update to 2.8.1. Fix for genymotion-player desktop file

--- a/genymotion-player.desktop
+++ b/genymotion-player.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Version=1.0
 Type=Application
+Version=1.0
 Name=Genymotion Player
+Comment=Virtual environment for Android.
+Exec=/usr/bin/genymotion-player
 Icon=genymotion-player
-NoDisplay=true
-Categories=System-Tools;
-StartupWMClass=Genymotion Player
-StartupNotify=false
 Terminal=false
+Categories=Development;
+StartupWMClass=Genymotion Player
