--- a/patch-Makefile.in
+++ b/patch-Makefile.in
@@ -1,6 +1,15 @@
---- Makefile.in.orig	2013-11-20 14:58:55.000000000 +0000
-+++ Makefile.in
-@@ -824,10 +824,10 @@ host=@host@
+--- Makefile.in-orig	2016-12-18 16:38:17.205009279 +1100
++++ Makefile.in	2016-12-18 17:08:10.110128607 +1100
+@@ -86,7 +86,7 @@
+ # Note: if EXTRA_GNATMAKE_FLAGS contains a -%args argument, we add -margs at
+ # the end because further builder flags may need to be passed.
+ 
+-COMP_TOOLS_GNATMAKE_FLAGS := @STYLE_SWITCHES@ -gnatwa@WARNINGS_MODE@ -gnat12 -gnatec=${top_builddir}/compilers/config.adc ${BASE_GNATMAKE_FLAGS}
++COMP_TOOLS_GNATMAKE_FLAGS := @STYLE_SWITCHES@ -gnatwa@WARNINGS_MODE@ -gnat12 -gnatec=${DESTDIR}${top_builddir}/compilers/config.adc ${BASE_GNATMAKE_FLAGS}
+ # Gnatmake flags for compilation tools mains, built without project files
+ 
+ # Extra flags for target
+@@ -847,16 +847,16 @@
  target=@target@
  
  ifeq (${target}, ${host})
@@ -13,17 +22,36 @@
 +  target_exe_dir=${DESTDIR}${prefix}/bin
  
  else
-   target_prefix=${prefix}/${target}
-@@ -884,10 +884,10 @@ install:
- 	# pre-built and packaged with sources.
- 	if [ -r docs/polyorb_ug.html ]; \
+-  target_prefix=${prefix}/${target}
+-  host_exe_dir=${prefix}/bin
+-  host_cmdprefix=${target}-
+-  target_exe_dir=${target_prefix}/bin
++  target_prefix=${DESTDIR}${prefix}/${target}
++  host_exe_dir=${DESTDIR}${prefix}/bin
++  host_cmdprefix=${DESTDIR}${target}-
++  target_exe_dir=${DESTDIR}${target_prefix}/bin
+ endif
+ projects_subdir=lib/gnat/polyorb
+ 
+@@ -867,7 +867,7 @@
+ 	@echo "Install prefix: ${prefix}"
+ 	@echo "          Host: ${host}"
+ 	@echo "        Target: ${target}"
+-	${PINSTALL} -d ${prefix}/bin ${target_prefix}/bin
++	${PINSTALL} -d ${DESTDIR}${prefix}/bin ${target_prefix}/bin
+ 	${RM} -fr "${target_prefix}/${projects_subdir}"
+ 	${PINSTALL} -d ${target_prefix}/${projects_subdir}
+ 	${PINSTALL} -d ${target_prefix}/lib/polyorb
+@@ -910,10 +910,10 @@
+         # check for existence of sphinx-build.
+ 	if [ -r doc/_build ]; \
  	then \
--	  (cd docs && ${MAKE} install prefix="${prefix}"); \
-+	  (cd docs && ${MAKE} install prefix="${target_prefix}"); \
- 	elif [ -r $(top_srcdir)/docs/polyorb_ug.html ]; \
+-	  (cd doc && ${MAKE} install prefix="${prefix}" SPHINXBUILD=true); \
++	  (cd doc && ${MAKE} install prefix="${DESTDIR}${prefix}" SPHINXBUILD=true); \
+ 	elif [ -r $(top_srcdir)/doc/_build ]; \
  	then \
--	  (cd docs && ${MAKE} install prefix="${prefix}" doc_build_dir="$(top_srcdir)/docs/"); \
-+	  (cd docs && ${MAKE} install prefix="${target_prefix}" doc_build_dir="$(top_srcdir)/docs/"); \
+-	  (cd doc && ${MAKE} install prefix="${prefix}" doc_build_dir="$(top_srcdir)/doc/" SPHINXBUILD=true); \
++	  (cd doc && ${MAKE} install prefix="${DESTDIR}${prefix}" doc_build_dir="$(top_srcdir)/doc/" SPHINXBUILD=true); \
  	fi
  
  # polyorb-dsa_p-partitions.ali is a special case above.
