working properly now...

--- a/ungoogled-chromium.desktop
+++ b/ungoogled-chromium.desktop
@@ -105,9 +105,9 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
-Exec=chromium-snapshot-bin %U
+Exec=ungoogled-chromium %U
 Terminal=false
-Icon=chromium-snapshot-bin
+Icon=ungoogled-chromium
 Type=Application
 Categories=GTK;Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
