--- a/gns3-server@.service
+++ b/gns3-server@.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=gns3 server for %i
-After=network.target
+Description=GNS3 server for %i
 
 [Service]
+Type=simple
 User=%i
-ExecStart=/usr/bin/gns3server --local
+ExecStart=/usr/bin/gns3server
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
