Throw up pip and use ArchLinux packages directly

--- a/powerdns-admin.service
+++ b/powerdns-admin.service
@@ -7,7 +7,7 @@ Type=simple
 User=powerdns-admin
 Group=powerdns-admin
 WorkingDirectory=/usr/share/webapps/powerdns-admin
-ExecStart=/usr/share/webapps/powerdns-admin/powerdns-admin
+ExecStart=/usr/share/webapps/powerdns-admin/run.py
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 NoNewPrivilegies=true
 PrivateTmp=true
