Patch GALE01r2.ini file to latest Gecko codes for 4.4

--- a/GALE01r2.ini
+++ b/GALE01r2.ini
@@ -256,21 +256,22 @@ C23039A4 00000016
 041cbf54 60000000
 041cbf84 60000000
 041CC8AC FC000028
+0421AAB0 4E800020
 
 $60FPS + 4X VRH
 *Default Netplay Mode. Requires Speedlimit to be set to 100% in Config -------------
-*Set Video Rate Hack to 4x and uncheck "Half Audio Rate" in GameConfig
-08402CC4 01380100
+*Set Video Rate Hack to 4x in GameConfig. Uncheck 60FPS Stock
+08402CC4 02700080
 20020004 00000000
 
 $60FPS Stock
 *Improves Polling Only. Requires Speedlimit to be set to 100% in Config ------------
-*Set Video Rate Hack to 1x and uncheck "Half Audio Rate" in GameConfig
+*Set Video Rate Hack to 1x in GameConfig. Uncheck 60FPS + 4X VRH
 C21A4DA0 00000003
 901C0000 3D808001
 618C95FC 7D8903A6
 4E800421 00000000
-08402CC4 004E0400
+08402CC4 009C0200
 20020004 00000000
 04019860 4BFFFD9D
 
