--- a/lugaru.desktop
+++ b/lugaru.desktop
@@ -3,8 +3,8 @@ Encoding=UTF-8
 Name=Lugaru
 GenericName=Lugaru
 Comment=Lugaru
-Exec=/usr/bin/lugaru
-Icon=/usr/share/pixmaps/lugaru.png
+Exec=/usr/local/games/lugaru
+Icon=/usr/local/share/icons/hicolor/128x128/apps/lugaru.png
 StartupNotify=true
 Terminal=false
 Type=Application
