--- a/Makefile-no-flow-check.patch
+++ b/Makefile-no-flow-check.patch
@@ -1,7 +1,7 @@
-diff --git a/Makefile b/Makefile
+diff --git Makefile Makefile
 index e2c56aa..d46bedd 100644
---- a/Makefile
-+++ b/Makefile
+--- Makefile
++++ Makefile
 @@ -222,8 +222,6 @@ endif
  
  do-test:
