--- a/gitea.service
+++ b/gitea.service
@@ -1,14 +1,26 @@
 [Unit]
-Description=Gogs (Go Git Service) server
+Description=Gitea (Git with a cup of tea)
 After=syslog.target
 After=network.target
+#After=mysqld.service
+#After=postgresql.service
+#After=memcached.service
+#After=redis.service
 
 [Service]
+# Modify these two values and uncomment them if you have
+# repos with lots of files and get an HTTP error 500 because
+# of that
+###
+#LimitMEMLOCK=infinity
+#LimitNOFILE=65535
 Type=simple
-User=gogs
-Group=gogs
-ExecStart=/usr/share/gogs/gogs web --config /srv/gogs/conf/app.ini
-WorkingDirectory=/usr/share/gogs/
+User=git
+Group=git
+WorkingDirectory=/var/lib/gitea
+ExecStart=/usr/bin/gitea web --config /etc/gitea/app.ini
+Restart=always
+Environment=USER=git HOME=/var/lib/gitea/repos
 
 [Install]
 WantedBy=multi-user.target
