Updated to version 2.11
Fixed .gitignore, dropped .install file, updated dkms.conf and deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-*.tar
-*.tar.*
-*.jar
-*.exe
-*.msi
-*.zip
-*.tgz
-*.tbz
-*.log
-*.log.*
-*.sig
+!.gitignore
 
-pkg/
-src/
+/src
+/pkg
+*.pkg*
+*.tar.xz
