--- a/dkms.conf
+++ b/dkms.conf
@@ -1,95 +1,102 @@
-PACKAGE_NAME="xtables-addons"
 PACKAGE_VERSION="@VERSION@"
+
+# Items below here should not have to change with each driver version
+
+PACKAGE_NAME="xtables-addons"
+BDIR="$dkms_tree/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
+MAKEARGS=" -C $kernel_source_dir M=${BDIR}/extensions XA_ABSTOPSRCDIR=${BDIR} XA_TOPSRCDIR=${BDIR} V=1"
+CLEAN="make ${MAKEARGS} clean"
+MAKE="make ${MAKEARGS} modules ; find ${BDIR} -name '*.ko' -exec mv -v {} ${BDIR} \;"
+
 AUTOINSTALL="yes"
-CLEAN="sh make.sh clean"
-MAKE[0]="sh make.sh make $kernelver"
 
-# per module configs
+# Automatically generated rules below
+####
+
+BUILT_MODULE_LOCATION[0]=""
 BUILT_MODULE_NAME[0]="xt_ACCOUNT"
-BUILT_MODULE_LOCATION[0]="extensions/ACCOUNT"
-DEST_MODULE_LOCATION[0]="/extramodules"
+DEST_MODULE_LOCATION[0]="/updates"
 
-BUILT_MODULE_NAME[1]="xt_pknock"
-BUILT_MODULE_LOCATION[1]="extensions/pknock"
-DEST_MODULE_LOCATION[1]="/extramodules"
+BUILT_MODULE_LOCATION[1]=""
+BUILT_MODULE_NAME[1]="compat_xtables"
+DEST_MODULE_LOCATION[1]="/updates"
 
-BUILT_MODULE_NAME[2]="compat_xtables"
-BUILT_MODULE_LOCATION[2]="extensions"
-DEST_MODULE_LOCATION[2]="/extramodules"
+BUILT_MODULE_LOCATION[2]=""
+BUILT_MODULE_NAME[2]="xt_pknock"
+DEST_MODULE_LOCATION[2]="/updates"
 
+BUILT_MODULE_LOCATION[3]=""
 BUILT_MODULE_NAME[3]="xt_CHAOS"
-BUILT_MODULE_LOCATION[3]="extensions"
-DEST_MODULE_LOCATION[3]="/extramodules"
+DEST_MODULE_LOCATION[3]="/updates"
 
-BUILT_MODULE_NAME[4]="xt_condition"
-BUILT_MODULE_LOCATION[4]="extensions"
-DEST_MODULE_LOCATION[4]="/extramodules"
+BUILT_MODULE_LOCATION[4]=""
+BUILT_MODULE_NAME[4]="xt_DELUDE"
+DEST_MODULE_LOCATION[4]="/updates"
 
-BUILT_MODULE_NAME[5]="xt_DELUDE"
-BUILT_MODULE_LOCATION[5]="extensions"
-DEST_MODULE_LOCATION[5]="/extramodules"
+BUILT_MODULE_LOCATION[5]=""
+BUILT_MODULE_NAME[5]="xt_DHCPMAC"
+DEST_MODULE_LOCATION[5]="/updates"
 
-BUILT_MODULE_NAME[6]="xt_DHCPMAC"
-BUILT_MODULE_LOCATION[6]="extensions"
-DEST_MODULE_LOCATION[6]="/extramodules"
+BUILT_MODULE_LOCATION[6]=""
+BUILT_MODULE_NAME[6]="xt_DNETMAP"
+DEST_MODULE_LOCATION[6]="/updates"
 
-BUILT_MODULE_NAME[7]="xt_DNETMAP"
-BUILT_MODULE_LOCATION[7]="extensions"
-DEST_MODULE_LOCATION[7]="/extramodules"
+BUILT_MODULE_LOCATION[7]=""
+BUILT_MODULE_NAME[7]="xt_IPMARK"
+DEST_MODULE_LOCATION[7]="/updates"
 
-BUILT_MODULE_NAME[8]="xt_fuzzy"
-BUILT_MODULE_LOCATION[8]="extensions"
-DEST_MODULE_LOCATION[8]="/extramodules"
+BUILT_MODULE_LOCATION[8]=""
+BUILT_MODULE_NAME[8]="xt_LOGMARK"
+DEST_MODULE_LOCATION[8]="/updates"
 
-BUILT_MODULE_NAME[9]="xt_geoip"
-BUILT_MODULE_LOCATION[9]="extensions"
-DEST_MODULE_LOCATION[9]="/extramodules"
+BUILT_MODULE_LOCATION[9]=""
+BUILT_MODULE_NAME[9]="xt_SYSRQ"
+DEST_MODULE_LOCATION[9]="/updates"
 
-BUILT_MODULE_NAME[10]="xt_iface"
-BUILT_MODULE_LOCATION[10]="extensions"
-DEST_MODULE_LOCATION[10]="/extramodules"
+BUILT_MODULE_LOCATION[10]=""
+BUILT_MODULE_NAME[10]="xt_TARPIT"
+DEST_MODULE_LOCATION[10]="/updates"
 
-BUILT_MODULE_NAME[11]="xt_IPMARK"
-BUILT_MODULE_LOCATION[11]="extensions"
-DEST_MODULE_LOCATION[11]="/extramodules"
+BUILT_MODULE_LOCATION[11]=""
+BUILT_MODULE_NAME[11]="xt_condition"
+DEST_MODULE_LOCATION[11]="/updates"
 
-BUILT_MODULE_NAME[12]="xt_ipp2p"
-BUILT_MODULE_LOCATION[12]="extensions"
-DEST_MODULE_LOCATION[12]="/extramodules"
+BUILT_MODULE_LOCATION[12]=""
+BUILT_MODULE_NAME[12]="xt_fuzzy"
+DEST_MODULE_LOCATION[12]="/updates"
 
-BUILT_MODULE_NAME[13]="xt_ipv4options"
-BUILT_MODULE_LOCATION[13]="extensions"
-DEST_MODULE_LOCATION[13]="/extramodules"
+BUILT_MODULE_LOCATION[13]=""
+BUILT_MODULE_NAME[13]="xt_geoip"
+DEST_MODULE_LOCATION[13]="/updates"
 
-BUILT_MODULE_NAME[14]="xt_length2"
-BUILT_MODULE_LOCATION[14]="extensions"
-DEST_MODULE_LOCATION[14]="/extramodules"
+BUILT_MODULE_LOCATION[14]=""
+BUILT_MODULE_NAME[14]="xt_iface"
+DEST_MODULE_LOCATION[14]="/updates"
 
-BUILT_MODULE_NAME[15]="xt_LOGMARK"
-BUILT_MODULE_LOCATION[15]="extensions"
-DEST_MODULE_LOCATION[15]="/extramodules"
+BUILT_MODULE_LOCATION[15]=""
+BUILT_MODULE_NAME[15]="xt_ipp2p"
+DEST_MODULE_LOCATION[15]="/updates"
 
-BUILT_MODULE_NAME[16]="xt_lscan"
-BUILT_MODULE_LOCATION[16]="extensions"
-DEST_MODULE_LOCATION[16]="/extramodules"
+BUILT_MODULE_LOCATION[16]=""
+BUILT_MODULE_NAME[16]="xt_ipv4options"
+DEST_MODULE_LOCATION[16]="/updates"
 
-BUILT_MODULE_NAME[17]="xt_psd"
-BUILT_MODULE_LOCATION[17]="extensions"
-DEST_MODULE_LOCATION[17]="/extramodules"
+BUILT_MODULE_LOCATION[17]=""
+BUILT_MODULE_NAME[17]="xt_length2"
+DEST_MODULE_LOCATION[17]="/updates"
 
-BUILT_MODULE_NAME[18]="xt_quota2"
-BUILT_MODULE_LOCATION[18]="extensions"
-DEST_MODULE_LOCATION[18]="/extramodules"
+BUILT_MODULE_LOCATION[18]=""
+BUILT_MODULE_NAME[18]="xt_lscan"
+DEST_MODULE_LOCATION[18]="/updates"
 
-BUILT_MODULE_NAME[19]="xt_SYSRQ"
-BUILT_MODULE_LOCATION[19]="extensions"
-DEST_MODULE_LOCATION[19]="/extramodules"
+BUILT_MODULE_LOCATION[19]=""
+BUILT_MODULE_NAME[19]="xt_psd"
+DEST_MODULE_LOCATION[19]="/updates"
 
-BUILT_MODULE_NAME[20]="xt_TARPIT"
-BUILT_MODULE_LOCATION[20]="extensions"
-DEST_MODULE_LOCATION[20]="/extramodules"
+BUILT_MODULE_LOCATION[20]=""
+BUILT_MODULE_NAME[20]="xt_quota2"
+DEST_MODULE_LOCATION[20]="/updates"
 
-# don't build xt_ECHO (example module, breaks build)
+#BUILT_MODULE_LOCATION[21]=""
 #BUILT_MODULE_NAME[21]="xt_ECHO"
-#BUILT_MODULE_LOCATION[21]="extensions"
-#DEST_MODULE_LOCATION[21]="/extramodules"
+#DEST_MODULE_LOCATION[21]="/updates"
