--- a/app_new.ini
+++ b/app_new.ini
@@ -24,6 +24,8 @@ PULL_REQUEST_QUEUE_LENGTH = 1000
 ; Preferred Licenses to place at the top of the List
 ; Name must match file name in conf/license or custom/conf/license
 PREFERRED_LICENSES = Apache License 2.0,MIT License
+; Disable ability to interact with repositories by HTTP protocol
+DISABLE_HTTP_GIT = false
 
 [repository.editor]
 ; List of file extensions that should have line wraps in the CodeMirror editor
@@ -101,6 +103,8 @@ DISABLE_SSH = false
 START_SSH_SERVER = false
 ; Domain name to be exposed in clone URL
 SSH_DOMAIN = %(DOMAIN)s
+; Network interface builtin SSH server listens on
+SSH_LISTEN_HOST = 0.0.0.0
 ; Port number to be exposed in clone URL
 SSH_PORT = 22
 ; Port number builtin SSH server listens on
@@ -242,7 +246,7 @@ PROVIDER = memory
 ; file: session file path, e.g. `data/sessions`
 ; redis: network=tcp,addr=:6379,password=macaron,db=0,pool_size=100,idle_timeout=180
 ; mysql: go-sql-driver/mysql dsn config string, e.g. `root:password@/session_table`
-PROVIDER_CONFIG = /srv/gogs/sessions
+PROVIDER_CONFIG = data/sessions
 ; Session cookie name
 COOKIE_NAME = i_like_gogits
 ; If you use session in https only, default is false
@@ -255,7 +259,7 @@ GC_INTERVAL_TIME = 86400
 SESSION_LIFE_TIME = 86400
 
 [picture]
-AVATAR_UPLOAD_PATH = /srv/gogs/data/avatars
+AVATAR_UPLOAD_PATH = data/avatars
 ; Chinese users can choose "duoshuo"
 ; or a custom avatar source, like: http://cn.gravatar.com/avatar/
 GRAVATAR_SOURCE = gravatar
@@ -270,7 +274,7 @@ ENABLE_FEDERATED_AVATAR = false
 ; Whether attachments are enabled. Defaults to `true`
 ENABLE = true
 ; Path for attachments. Defaults to `data/attachments`
-PATH = /srv/gogs/data/attachments
+PATH = data/attachments
 ; One or more allowed types, e.g. image/jpeg|image/png
 ALLOWED_TYPES = image/jpeg|image/png
 ; Max size of each file. Defaults to 32MB
@@ -334,7 +338,7 @@ HOST =
 ; Mailer user name and password
 USER =
 PASSWD =
-; Receivers, can be one or more, e.g. ["1@example.com","2@example.com"]
+; Receivers, can be one or more, e.g. 1@example.com,2@example.com
 RECEIVERS =
 
 ; For "database" mode only
@@ -398,8 +402,8 @@ DEFAULT_INTERVAL = 8
 MAX_RESPONSE_ITEMS = 50
 
 [i18n]
-LANGS = en-US,zh-CN,zh-HK,zh-TW,de-DE,fr-FR,nl-NL,lv-LV,ru-RU,ja-JP,es-ES,pt-BR,pl-PL,bg-BG,it-IT,fi-FI,tr-TR,cs-CZ,sr-SP
-NAMES = English,简体中文,繁體中文（香港）,繁體中文（台湾）,Deutsch,Français,Nederlands,Latviešu,Русский,日本語,Español,Português do Brasil,Polski,български,Italiano,Suomalainen,Türkçe,čeština,Српски
+LANGS = en-US,zh-CN,zh-HK,zh-TW,de-DE,fr-FR,nl-NL,lv-LV,ru-RU,ja-JP,es-ES,pt-BR,pl-PL,bg-BG,it-IT,fi-FI,tr-TR,cs-CZ,sr-SP,sv-SE,ko-KR,gl-ES
+NAMES = English,简体中文,繁體中文（香港）,繁體中文（台湾）,Deutsch,Français,Nederlands,Latviešu,Русский,日本語,Español,Português do Brasil,Polski,български,Italiano,Suomalainen,Türkçe,čeština,Српски,Svenska,한국어,Galego
 
 ; Used for datetimepicker
 [i18n.datelang]
@@ -421,6 +425,10 @@ it-IT = it
 fi-FI = fi
 tr-TR = tr
 cs-CZ = cs-CZ
+sr-SP = sr
+sv-SE = sv
+ko-KR = ko
+gl-ES = gl
 
 ; Extension mapping to highlight class
 ; e.g. .toml=ini
