--- a/app.ini
+++ b/app.ini
@@ -171,6 +171,8 @@ COOKIE_USERNAME = gitea_awesome
 COOKIE_REMEMBER_NAME = gitea_incredible
 ; Reverse proxy authentication header name of user name
 REVERSE_PROXY_AUTHENTICATION_USER = X-WEBAUTH-USER
+; Sets the minimum password length for new Users
+MIN_PASSWORD_LENGTH = 6
 
 [service]
 ACTIVE_CODE_LIVE_MINUTES = 180
@@ -227,6 +229,10 @@ USER =
 PASSWD =
 ; Use text/html as alternative format of content
 ENABLE_HTML_ALTERNATIVE = false
+; Enable sendmail (override SMTP)
+USE_SENDMAIL = false
+; Specifiy an alternative sendmail binary
+SENDMAIL_PATH = sendmail
 
 [cache]
 ; Either "memory", "redis", or "memcache", default is "memory"
