--- a/crates.desktop
+++ b/crates.desktop
@@ -6,4 +6,4 @@ GenericName=Crates
 Comment=Challenging and fun three dimensional puzzle game.
 Exec=/usr/bin/crates.sh
 Categories=Game;ArcadeGame;
-Icon=crates.ico
+Icon=/usr/share/pixmaps/crates.ico
