Fold CSUR variant under Unifont

--- a/fontconfig-upper.conf
+++ b/fontconfig-upper.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<!-- this file makes fontconfig consider "Unifont" and "Unifont Upper" parts of the same font -->
+	<!-- this file makes fontconfig consider "Unifont", "Unifont Upper" and "Unifont CSUR" parts of the same font -->
 
 	<match target="scan">
 		<test name="file" compare="contains">
@@ -20,13 +20,13 @@
 
 	<match target="scan">
 		<test name="file" compare="contains">
-			<string>unifont_upper_csur.ttf</string>
+			<string>unifont_csur.ttf</string>
 		</test>
 		<edit name="family">
-			<string>Unifont CSUR</string>
+			<string>Unifont</string>
 		</edit>
 		<edit name="fullname">
-			<string>Unifont CSUR</string>
+			<string>Unifont</string>
 		</edit>
 		<edit name="fontversion">
 			<int>8</int>
@@ -41,9 +41,16 @@
 	</alias>
 
 	<alias binding="same">
+		<family>Unifont CSUR</family>
+		<accept>
+			<family>Unifont</family>
+		</accept>
+	</alias>
+
+	<alias binding="same">
 		<family>Unifont Upper CSUR</family>
 		<accept>
-			<family>Unifont CSUR</family>
+			<family>Unifont</family>
 		</accept>
 	</alias>
 </fontconfig>
