--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,7 +1,6 @@
 server.modules = (
 	"mod_access",
 	"mod_accesslog",
-	"mod_auth",
 	"mod_expire",
 	"mod_compress",
  	"mod_redirect",
@@ -26,7 +25,7 @@ mimetype.assign		= (
 fastcgi.server = ( 
     ".php" => (
         "localhost" => ( 
-            "bin-path" => "/usr/bin/php-cgi -d open_basedir=/srv/http/pihole:/etc/pihole:/etc/hosts:/etc/hostname:/run/log/pihole:/run/pihole -d session.save_path=/run/pihole",
+            "bin-path" => "/usr/bin/php-cgi -d open_basedir=/srv/http/pihole:/run/log/pihole:/run/pihole:/etc/pihole:/etc/hosts:/etc/hostname:/proc/meminfo:/sys/class/hwmon:/sys/class/thermal -d session.save_path=/run/pihole",
             "socket" => "/tmp/php-fastcgi.sock",
             "broken-scriptfilename" => "enable",
             "max-procs" => 4, 
@@ -38,7 +37,7 @@ fastcgi.server = (
 )
 
 server.document-root        = "/srv/http/pihole"
-server.error-handler-404    = "index.html"
+server.error-handler-404    = "/pihole/index.php"
 server.username             = "http"
 server.groupname            = "http"
 server.port                 = 80
@@ -50,6 +49,15 @@ static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 compress.cache-dir          = "/var/cache/lighttpd/compress/"
 compress.filetype           = ( "application/javascript", "text/css", "text/html", "text/plain" )
 
+# If the URL starts with /admin, it is the Web interface
+$HTTP["url"] =~ "^/admin/" {
+	# Create a response header for debugging using curl -I
+    setenv.add-response-header = (
+        "X-Pi-hole" => "The Pi-hole Web interface is working!",
+        "X-Frame-Options" => "DENY"
+    )
+}
+
 # Rewite js requests, must be out of $HTTP block due to bug #2526
 url.rewrite = ( "^(?!/admin/).*\.js$"  => "pihole/index.js"   )
 
@@ -59,3 +67,5 @@ $HTTP["url"] =~ "^(?!/admin)/.*" {
     setenv.add-response-header = ( "X-Pi-hole" => "A black hole for Internet advertisements." )
 }
 
+# Add user chosen options held in external file
+include_shell "cat external.conf 2>/dev/null"
