--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -14,7 +14,7 @@ pkgrel=1
 url='http://quassel-irc.org'
 license=('GPL')
 arch=('i686' 'x86_64' 'arm')
-makedepends=('git' 'cmake' 'automoc4')
+makedepends=('git' 'cmake' 'automoc4' 'extra-cmake-modules' 'qt5-tools' 'knotifyconfig')
 source=(
   'git+https://github.com/quassel/quassel.git'
  #'git://git.quassel-irc.org/quassel.git'
