Add info for reverse proxy setup and fix Working Dir

--- a/beehive.service
+++ b/beehive.service
@@ -3,6 +3,7 @@ Description=Beehive
 
 [Service]
 User=beehive
+WorkingDirectory=/usr/share/webapps/beehive
 ExecStart=/usr/share/webapps/beehive/beehive -config /etc/beehive/beehive.conf
 
 [Install]
