thanks to dvzrv: fixed the actual protocol selection. it probably worked never as intended

--- a/reflector.conf
+++ b/reflector.conf
@@ -4,7 +4,7 @@ LATEST=30
 NUMBER=20
 SORT=rate
 ### remove an entry if you don't want it as available protocol
-PROTOCOL1=http
-PROTOCOL2=https
-PROTOCOL3=ftp
-PROTOCOL4=rsync
+PROTOCOL1='-p http'
+PROTOCOL2='-p https'
+PROTOCOL3='-p ftp'
+PROTOCOL4='-p rsync'
