--- a/reflector.service
+++ b/reflector.service
@@ -8,4 +8,4 @@ After=network-online.target
 Type=oneshot
 EnvironmentFile=/usr/share/reflector-timer/reflector.conf
 EnvironmentFile=-/etc/conf.d/reflector.conf
-ExecStart=/usr/bin/reflector --age "$AGE" --country "$COUNTRY" --latest "$LATEST" --number "$NUMBER" --sort "$SORT" --save /etc/pacman.d/mirrorlist --protocol "$PROTOCOL1" --protocol "$PROTOCOL2" --protocol "$PROTOCOL3" --protocol "$PROTOCOL4"
+ExecStart=/usr/bin/reflector --age "$AGE" --country "$COUNTRY" --latest "$LATEST" --number "$NUMBER" --sort "$SORT" --save /etc/pacman.d/mirrorlist "$PROTOCOL1" "$PROTOCOL2" "$PROTOCOL3" "$PROTOCOL4"
