--- a/fez.desktop
+++ b/fez.desktop
@@ -4,7 +4,6 @@ Value=1.0
 Type=Application
 Name=Fez
 Comment=A game where you play as Gomez, a 2D creature living in what he believes is a 2D world
-Icon=fez.png
-Exec=fez
+Icon=fez
+Exec=/usr/bin/fez
 Categories=Game;
-Path=/opt/fez
