fixed missing symbols

--- a/dkms.conf
+++ b/dkms.conf
@@ -2,5 +2,5 @@ PACKAGE_NAME="@PKGBASE@"
 PACKAGE_VERSION="@PKGVER@"
 BUILT_MODULE_NAME[0]="@PKGBASE@"
 DEST_MODULE_LOCATION[0]="/kernel/fs/ncpfs/"
-MAKE[0]="make -j8 KERNELRELEASE=${kernelver} -C /usr/lib/modules/${kernelver}/build M=/var/lib/dkms/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
+MAKE[0]="make -j8 KERNELRELEASE=${kernelver} -C /usr/lib/modules/${kernelver}/build /var/lib/dkms/${PACKAGE_NAME}/${PACKAGE_VERSION}/build;make -j8 KERNELRELEASE=${kernelver} -C /usr/lib/modules/${kernelver}/build M=/var/lib/dkms/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
 AUTOINSTALL="yes"
