--- a/topinambour-git.desktop
+++ b/topinambour-git.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=topinambour
+_Name=Topinambour
 _Comment=Use the command line
 _Keywords=shell;prompt;command;commandline;cmd;
 TryExec=topinambour
