--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
       "Name": "114DNS",
       "Address": "114.114.114.114:53",
       "Protocol": "udp",
+      "SOCKS5Address": "",
       "Timeout": 5,
       "EDNSClientSubnet": {
         "Policy": "disable",
@@ -15,7 +16,8 @@
       "Name": "Google DNS",
       "Address": "8.8.8.8:53",
       "Protocol": "udp",
-      "Timeout": 6,
+      "SOCKS5Address": "",
+      "Timeout": 5,
       "EDNSClientSubnet": {
         "Policy": "disable",
         "ExternalIP": ""
@@ -27,7 +29,8 @@
       "Name": "Google DNS",
       "Address": "8.8.8.8:53",
       "Protocol": "tcp",
-      "Timeout": 6,
+      "SOCKS5Address": "",
+      "Timeout": 5,
       "EDNSClientSubnet": {
         "Policy": "disable",
         "ExternalIP": ""
@@ -37,7 +40,8 @@
       "Name": "OpenDNS",
       "Address": "208.67.222.222:443",
       "Protocol": "tcp",
-      "Timeout": 6,
+      "SOCKS5Address": "",
+      "Timeout": 5,
       "EDNSClientSubnet":{
         "Policy": "disable",
         "ExternalIP": ""
