--- a/sickrage.service
+++ b/sickrage.service
@@ -9,8 +9,8 @@ Group=sickrage
 
 #Type=forking
 #PIDFile=/run/sickrage/sickrage.pid
-#ExecStart=/usr/bin/env python2 /opt/sickrage/SickBeard.py --quiet --daemon --config /opt/sickrage/config.ini --datadir /opt/sickrage --pidfile=/run/sickrage/sickrage.pid
-ExecStart=/usr/bin/env python2 /opt/sickrage/SickBeard.py --quiet --nolaunch --config /opt/sickrage/config.ini --datadir /opt/sickrage
+#ExecStart=/usr/bin/env python2 /opt/sickrage/app/SickBeard.py --quiet --daemon --datadir /opt/sickrage/data --pidfile=/run/sickrage/sickrage.pid
+ExecStart=/usr/bin/env python2 /opt/sickrage/app/SickBeard.py --quiet --nolaunch --datadir /opt/sickrage/data
 
 [Install]
 WantedBy=multi-user.target
