--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,3 +1,22 @@
+# Pi-hole: A black hole for Internet advertisements
+# (c) 2017 Pi-hole, LLC (https://pi-hole.net)
+# Network-wide ad blocking via your own hardware.
+#
+# lighttpd config for Pi-hole
+#
+# This file is copyright under the latest version of the EUPL.
+# Please see LICENSE file for your rights under this license.
+
+
+
+###############################################################################
+#     FILE AUTOMATICALLY OVERWRITTEN BY PI-HOLE INSTALL/UPDATE PROCEDURE.     #
+# ANY CHANGES MADE TO THIS FILE AFTER INSTALL WILL BE LOST ON THE NEXT UPDATE #
+#                                                                             #
+#              CHANGES SHOULD BE MADE IN A SEPERATE CONFIG FILE:              #
+#                         /etc/lighttpd/external.conf                         #
+###############################################################################
+
 server.modules = (
 	"mod_access",
 	"mod_accesslog",
@@ -25,7 +44,7 @@ mimetype.assign		= (
 fastcgi.server = ( 
     ".php" => (
         "localhost" => ( 
-            "bin-path" => "/usr/bin/php-cgi -d open_basedir=/srv/http/pihole:/run/log/pihole:/run/pihole:/etc/pihole:/etc/hosts:/etc/hostname:/etc/dnsmasq.d/03-pihole-wildcard.conf:/proc/meminfo:/sys/class/thermal/thermal_zone0/temp -d session.save_path=/run/pihole",
+            "bin-path" => "/usr/bin/php-cgi -d open_basedir=/srv/http/pihole:/run/log/pihole:/run/pihole:/etc/pihole:/etc/hosts:/etc/hostname:/etc/dnsmasq.d/03-pihole-wildcard.conf:/proc/meminfo:/proc/cpuinfo:/sys/class/thermal/thermal_zone0/temp -d session.save_path=/run/pihole",
             "socket" => "/tmp/php-fastcgi.sock",
             "broken-scriptfilename" => "enable",
             "max-procs" => 4, 
@@ -65,6 +84,13 @@ url.rewrite = ( "^(?!/admin/).*\.js$"  => "pihole/index.js"   )
 $HTTP["url"] =~ "^(?!/admin)/.*" {
     # Create a response header for debugging using curl -I
     setenv.add-response-header = ( "X-Pi-hole" => "A black hole for Internet advertisements." )
+}
+
+# Entering just "pi.hole" into a browser redirects to "pi.hole/admin/"
+$HTTP["host"] == "pi.hole" {
+    $HTTP["url"] == "/" {
+        url.redirect = ( "" => "/admin/" )
+    }
 }
 
 # Add user chosen options held in external file
