--- a/aseprite.desktop
+++ b/aseprite.desktop
@@ -6,6 +6,7 @@ Comment=Pixel-art paint program
 MimeType=image/bmp;image/gif;image/jpeg;image/png;image/x-pcx;image/x-tga;image/vnd.microsoft.icon;video/x-flic;image/webp;image/x-aseprite;
 Exec=aseprite %U
 Terminal=false
+StartupWMClass=allegro
 Categories=Graphics;2DGraphics;RasterGraphics;
 Icon=aseprite
 X-Desktop-File-Install-Version=0.22
