Updated to version 5.5 of firetable. Fixed firetable.service not working properly. Removed old patch. Added new patch to fix an ip detection issue.

--- a/firetable.service
+++ b/firetable.service
@@ -2,9 +2,10 @@
 Description=Firetable firewall daemon
 
 [Service]
-Type=forking
-ExecStart=/usr/bin/firetable-start
+Type=oneshot
+ExecStart=/usr/bin/firetable start
 ExecStop=/usr/bin/firetable stop
+RemainAfterExit=true
 
 [Install]
 WantedBy=network.target
