--- a/thunderbird-beta.desktop
+++ b/thunderbird-beta.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Thunderbird
+Name=Thunderbird (Bleeding edge)
 Comment=Send and receive mail with Thunderbird
 Comment[ast]=Lleer y escribir corréu electrónicu
 Comment[ca]=Llegiu i escriviu correu
@@ -28,7 +28,7 @@ Comment[uk]=Читання та написання листів
 Comment[vi]=Đọc và soạn thư điện tử
 Comment[zh_CN]=阅读邮件或新闻
 Comment[zh_TW]=以 Mozilla Thunderbird 讀寫郵件或新聞
-GenericName=Mail Client
+GenericName=Mail Client (Bleeding edge)
 GenericName[ast]=Client de correu
 GenericName[ca]=Client de correu
 GenericName[cs]=Poštovní klient
@@ -55,10 +55,10 @@ GenericName[uk]=Поштова програма
 GenericName[vi]=Phần mềm khách quản lý thư điện tử
 GenericName[zh_CN]=邮件新闻客户端
 GenericName[zh_TW]=郵件用戶端
-Exec=thunderbird %u
+Exec=thunderbird-beta %u
 Terminal=false
 Type=Application
-Icon=thunderbird
+Icon=thunderbird-beta
 Categories=Network;Email;
 MimeType=message/rfc822;x-scheme-handler/mailto;application/x-xpinstall;
 StartupNotify=true
@@ -116,7 +116,7 @@ Name[uk]=Написати нового листа
 Name[vi]=Viết thư mới
 Name[zh_CN]=编写新消息
 Name[zh_TW]=寫一封新訊息
-Exec=thunderbird -compose
+Exec=thunderbird-beta -compose
 
 [Desktop Action OpenAddressBook]
 Name=Open address book
@@ -170,4 +170,4 @@ Name[uk]=Відкрити адресну книгу
 Name[vi]=Mở sổ địa chỉ
 Name[zh_CN]=打开通讯录
 Name[zh_TW]=開啟通訊錄
-Exec=thunderbird -addressbook
+Exec=thunderbird-beta -addressbook
