--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ keepass-plugin-keeagent-*.pkg.tar.xz
 keepass-plugin-keeagent-*.src.tar.gz
 KeeAgent_*.zip
 keepass-plugin-keeagent-*.zip
+pkg/*
+src/*
