--- a/radarr.service
+++ b/radarr.service
@@ -5,7 +5,7 @@ After=syslog.target network.target
 [Service]
 User=radarr
 Group=radarr
-ExecStart=/usr/bin/radarr -nobrowser -data=/var/lib/radarr
+ExecStart=/usr/bin/mono --debug /usr/lib/radarr/Radarr.exe -nobrowser -data=/var/lib/radarr
 Type=simple
 TimeoutStopSec=20
 KillMode=process
