--- a/firefox-developer.desktop
+++ b/firefox-developer.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Firefox Developer
+Name=Firefox Développeur
 GenericName=Web Browser
 Icon=firefox-developer-icon
 Type=Application
