--- a/worldpainter.desktop
+++ b/worldpainter.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Worldpainter
+Name=WorldPainter
 GenericName=WorldPainter
 Comment=Paint your own Minecraft worlds
 Comment[de]=Minecraft-Welten durch malen erstellen
