--- a/xctu.desktop
+++ b/xctu.desktop
@@ -4,6 +4,6 @@ Version=6.3.2.3
 Name=XCTU
 Comment=Configuration and Test Utiity
 Icon=xctu.xpm
-Exec=env UBUNTU_MENUPROXY=0 GTK2_RC_FILES=$GTK2_RC_FILES:/opt/xctu/.gtkrc-eclipse /opt/xctu/app
+Exec=/usr/bin/xctu
 Terminal=false
 Path=/opt/xctu
