create seperate indexer dir

--- a/app.ini
+++ b/app.ini
@@ -159,7 +159,7 @@ SSL_MODE = disable
 PATH = data/gitea.db
 
 [indexer]
-ISSUE_INDEXER_PATH = indexers/issues.bleve
+ISSUE_INDEXER_PATH = /var/lib/gitea/indexer/issues.bleve
 UPDATE_BUFFER_LEN = 20
 
 [admin]
