increment pkgrel to 3; obelisk

--- a/bs.service
+++ b/bs.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Libbitcoin server: a full Bitcoin node in the global peer-to-peer network
-Conflicts=bsinit.service
+Description=Bitcoin Server: a Bitcoin full node and query server
+Conflicts=bs-init.service bn-init.service bn.service
 
 [Service]
 Type=simple
-User=bs
-Group=bs
-ExecStart=/usr/bin/bs /etc/bs/bs.cfg
+User=obelisk
+Group=obelisk
+ExecStart=/usr/bin/bs /etc/obelisk/bs/bs.cfg
 ExecReload=/usr/bin/kill -s SIGHUP $MAINPID
 ExecStop=/usr/bin/kill -s SIGINT $MAINPID
 
