Spelling in .desktop

--- a/thunderbird-hg.desktop
+++ b/thunderbird-hg.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Thunderbird (Merucial version)
+Name=Thunderbird (Mercurial version)
 Comment=Send and receive mail with Thunderbird
 Comment[ast]=Lleer y escribir corréu electrónicu
 Comment[ca]=Llegiu i escriviu correu
