--- a/searx.service
+++ b/searx.service
@@ -13,7 +13,9 @@ ProtectHome=true
 # Prevent writes to /usr, /boot, and /etc
 ProtectSystem=full
 ExecStart=/usr/bin/searx-run
-Restart=on-abort
+
+Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
