Update to 20170310.r108.03c2238 of the new gradle-based raccoon4 repo

--- a/raccoon.desktop
+++ b/raccoon.desktop
@@ -5,7 +5,7 @@ Name=Raccoon
 GenericName=Play Store Downloader
 Comment=Download APK files from the Google Play Store
 Exec=/usr/bin/raccoon
-Icon=/usr/share/pixmaps/raccoon.svg
+Icon=/usr/share/pixmaps/raccoon.ico
 Terminal=false
 Type=Application
 StartupNotify=true
