--- a/aporia.desktop
+++ b/aporia.desktop
@@ -1,6 +1,9 @@
 [Desktop Entry]
 Type=Application
-Categories=Development;TextEditor;
-Exec=aporia
-GenericName=Nimrod IDE
 Name=Aporia
+Comment=IDE for Nim programming language
+Exec=aporia %U
+Icon=aporia
+Terminal=false
+Categories=Development;IDE;
+StartupWMClass=aporia
