increment pkgrel to 2; fix electrumx.conf

--- a/electrumx.conf
+++ b/electrumx.conf
@@ -42,8 +42,10 @@
 #
 #MISC
 #
-    COIN = Bitcoin  # lib/coins.py
-    NET = mainnet  # lib/coins.py
+    COIN = Bitcoin
+        #lib/coins.py
+    NET = mainnet
+        #lib/coins.py
     DB_ENGINE = leveldb
         #leveldb, rocksdb (You'll need to install appropriate python packages)
 
