--- a/makefile-system-htslib.patch
+++ b/makefile-system-htslib.patch
@@ -1,16 +1,17 @@
-diff -aur /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile /tmp/makepkg/bcftools/src/bcftools-1.3.1-patched/Makefile
---- /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile	2016-04-22 11:50:59.000000000 +0200
-+++ /tmp/makepkg/bcftools/src/bcftools-1.3.1-patched/Makefile	2016-05-29 20:18:22.323268586 +0200
-@@ -28,18 +28,10 @@
- 
+--- Makefile.orig	2017-03-14 07:26:49.191430557 +0100
++++ Makefile	2017-03-14 07:27:44.929678345 +0100
+@@ -29,20 +29,10 @@
  all: $(PROG) $(TEST_PROG)
  
--# Adjust $(HTSDIR) to point to your top-level htslib directory
--HTSDIR = htslib-1.3.1
+ # Adjust $(HTSDIR) to point to your top-level htslib directory
+-HTSDIR = htslib-1.4
 -include $(HTSDIR)/htslib.mk
+-include $(HTSDIR)/htslib_static.mk
 -HTSLIB = $(HTSDIR)/libhts.a
 -BGZIP  = $(HTSDIR)/bgzip
 -TABIX  = $(HTSDIR)/tabix
+-HTSLIB_LDFLAGS = $(HTSLIB_static_LDFLAGS)
+-HTSLIB_LIBS = $(HTSLIB_static_LIBS)
 +HTSDIR = /usr/include
  
  CC       = gcc
@@ -20,10 +21,21 @@ diff -aur /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile /tmp/makepkg/bcftool
 -LIBS     =
 +CFLAGS   := -g -Wall -Wc++-compat -O2 $(CFLAGS)
  
+ ifeq "$(shell uname -s)" "Darwin"
+ DYNAMIC_FLAGS = -Wl,-export_dynamic
+@@ -51,8 +41,8 @@
+ endif
+ 
+ # TODO Use configure or htslib.pc to add -rdynamic/-ldl conditionally
+-ALL_CPPFLAGS = -I. $(HTSLIB_CPPFLAGS) $(CPPFLAGS)
+-ALL_LDFLAGS  = $(DYNAMIC_FLAGS) $(HTSLIB_LDFLAGS) $(LDFLAGS)
++ALL_CPPFLAGS = -I. $(CPPFLAGS)
++ALL_LDFLAGS  = $(DYNAMIC_FLAGS) $(LDFLAGS)
+ ALL_LIBS     = -lm -lz -ldl $(LIBS)
+ 
  OBJS     = main.o vcfindex.o tabix.o \
-            vcfstats.o vcfisec.o vcfmerge.o vcfquery.o vcffilter.o filter.o vcfsom.o \
-@@ -48,7 +40,7 @@
-            vcfcnv.o HMM.o vcfplugin.o consensus.o ploidy.o version.o \
+@@ -64,7 +54,7 @@
+            mpileup.o bam2bcf.o bam2bcf_indel.o bam_sample.o \
             ccall.o em.o prob1.o kmin.o # the original samtools calling
  
 -EXTRA_CPPFLAGS = -I. -I$(HTSDIR) -DPLUGINPATH=\"$(pluginpath)\"
@@ -31,7 +43,7 @@ diff -aur /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile /tmp/makepkg/bcftool
  GSL_LIBS       =
  
  # The polysomy command is not compiled by default because it brings dependency
-@@ -57,7 +49,7 @@
+@@ -73,7 +63,7 @@
  ifdef USE_GPL
      EXTRA_CPPFLAGS += -DUSE_GPL
      OBJS += polysomy.o peakfit.o
@@ -40,13 +52,14 @@ diff -aur /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile /tmp/makepkg/bcftool
  endif
  
  prefix      = /usr/local
-@@ -101,11 +93,11 @@
+@@ -117,12 +107,12 @@
  .c.o:
- 	$(CC) $(CFLAGS) $(EXTRA_CPPFLAGS) $(CPPFLAGS) -c -o $@ $<
+ 	$(CC) $(CFLAGS) $(EXTRA_CPPFLAGS) $(ALL_CPPFLAGS) -c -o $@ $<
  
--test: $(PROG) plugins test/test-rbuf $(BGZIP) $(TABIX)
+-test: $(PROG) plugins test/test-rbuf test/test-regidx $(BGZIP) $(TABIX)
++test: $(PROG) plugins test/test-rbuf test/test-regidx
+ 	./test/test-regidx
 -	./test/test.pl --exec bgzip=$(BGZIP) --exec tabix=$(TABIX)
-+test: $(PROG) plugins test/test-rbuf
 +	./test/test.pl --exec bgzip=bgzip --exec tabix=tabix
  
 -test-plugins: $(PROG) plugins test/test-rbuf $(BGZIP) $(TABIX)
@@ -56,16 +69,19 @@ diff -aur /tmp/makepkg/bcftools/src/bcftools-1.3.1/Makefile /tmp/makepkg/bcftool
  
  
  # Plugin rules
-@@ -180,8 +172,8 @@
- test/test-rbuf: test/test-rbuf.o
- 	$(CC) $(LDFLAGS) -o $@ $^ -lm $(LIBS)
+@@ -208,11 +198,11 @@
+ 
+ test/test-regidx.o: test/test-regidx.c regidx.h
+ 
+-test/test-regidx: test/test-regidx.o regidx.o $(HTSLIB)
+-	$(CC) $(ALL_LDFLAGS) -o $@ $^ $(HTSLIB) -lpthread $(HTSLIB_LIBS) $(ALL_LIBS)
++test/test-regidx: test/test-regidx.o regidx.o
++	$(CC) $(ALL_LDFLAGS) -o $@ $^ -lpthread -lhts $(ALL_LIBS)
  
 -bcftools: $(HTSLIB) $(OBJS)
--	$(CC) -rdynamic $(LDFLAGS) -o $@ $(OBJS) $(HTSLIB) -lpthread -lz -lm -ldl $(GSL_LIBS) $(LIBS)
+-	$(CC) $(ALL_LDFLAGS) -o $@ $(OBJS) $(HTSLIB) -lpthread $(HTSLIB_LIBS) $(GSL_LIBS) $(ALL_LIBS)
 +bcftools: $(OBJS)
-+	$(CC) -rdynamic $(LDFLAGS) -o $@ $(OBJS) -lhts -lpthread -lz -lm -ldl $(GSL_LIBS) $(LIBS)
++	$(CC) $(ALL_LDFLAGS) -o $@ $(OBJS) -lpthread -lhts $(GSL_LIBS) $(ALL_LIBS)
  
  doc/bcftools.1: doc/bcftools.txt
  	cd doc && a2x -adate="$(DOC_DATE)" -aversion=$(DOC_VERSION) --doctype manpage --format manpage bcftools.txt
-Only in /tmp/makepkg/bcftools/src/bcftools-1.3.1-patched: Makefile.orig
-Only in /tmp/makepkg/bcftools/src/bcftools-1.3.1-patched: Makefile.rej
