generate desktop file
This creates a central definition point for all information, eliminating
duplicated texts in the desktop file.

--- a/minimetro.desktop
+++ b/minimetro.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=Mini Metro
-Exec=minimetro
-Icon=minimetro
+Name=$longname
+Exec=$pkgname
+Icon=$pkgname
 Type=Application
 Categories=Game;StrategyGame;Simulation;
