--- a/system.service
+++ b/system.service
@@ -6,7 +6,7 @@ After=network.target
 User=thelounge
 Group=thelounge
 Type=simple
-ExecStart=/usr/bin/lounge --home /etc/thelounge
+ExecStart=/usr/bin/lounge --home /etc/thelounge start
 ProtectSystem=yes
 ProtectHome=yes
 NoNewPrivileges=yes
