--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,9 @@ test:
   only:
     - master
   before_script:
+    - pacman -Syuw --noconfirm
+    - rm /etc/ssl/certs/ca-certificates.crt
+    - pacman -Su --noconfirm
     - pacman -Syyu namcap --noconfirm
     - useradd somebody
     - echo "somebody ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
@@ -18,6 +21,9 @@ test:
 github:
   stage: deploy
   before_script:
+    - pacman -Syuw --noconfirm
+    - rm /etc/ssl/certs/ca-certificates.crt
+    - pacman -Su --noconfirm
     - pacman -Syyu git --noconfirm
     - git checkout "$CI_BUILD_REF_NAME"
     - git remote add github https://"$GITHUB_USERNAME":"$GITHUB_TOKEN"@github.com/sanduhrs/arch-aur-traefik-bin
@@ -33,6 +39,9 @@ github:
 aur:
   stage: deploy
   before_script:
+    - pacman -Syuw --noconfirm
+    - rm /etc/ssl/certs/ca-certificates.crt
+    - pacman -Su --noconfirm
     - pacman -Syyu git openssh --noconfirm
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
