--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # sources
 *.tar.gz
-LICENSE
+LICENSE.txt
 
 # build logs
 *-build.log
 *-namcap.log
 *-package*.log
+*-prepare.log
 
 # packages
 *.pkg.tar.xz
