Fixes to be able to currently build and run.

--- a/drone.service
+++ b/drone.service
@@ -6,7 +6,7 @@ After=network.target
 User=drone
 Type=simple
 EnvironmentFile=/etc/drone/server
-ExecStart=/usr/bin/drone server
+ExecStart=/usr/bin/drone-server
 ExecReload=/usr/bin/kill -HUP $MAINPID
 Restart=on-failure
 KillSignal=SIGINT
