Add default system directory

--- a/retroarch-standalone.cfg
+++ b/retroarch-standalone.cfg
@@ -5,3 +5,4 @@ cache_directory = "~/.cache"
 libretro_directory = "~/.config/retroarch/cores"
 libretro_info_path = "~/.config/retroarch/info"
 video_shader_dir = "~/.config/retroarch/shaders"
+system_directory = "~/.config/retroarch/system"
