--- a/spigot.service
+++ b/spigot.service
@@ -3,9 +3,12 @@ Description=Spigot Minecraft server
 Conflicts=minecraft.service craftbukkit.service
 
 [Service]
+User=craftbukkit
+Group=craftbukkit
+RuntimeDirectory=craftbukkit
+PIDFile=/run/craftbukkit/spigot.pid
 ExecStart=/srv/craftbukkit/start_server.sh spigot
 ExecStop=/srv/craftbukkit/stop_server.sh
-PIDFile=/var/run/spigot.pid
 Type=forking
 
 [Install]
