Add support for sending automatic status mails using systemd-unit-status-mail

--- a/luky-borg-backup.service
+++ b/luky-borg-backup.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=LukyLX Incremental Backup
+Wants=unit-status-mail@%n.service
+Before=unit-status-mail@%n.service
 
 [Service]
 Type=oneshot
