--- a/factorio-headless.service
+++ b/factorio-headless.service
@@ -7,7 +7,7 @@ After=network.target
 User=factorio
 EnvironmentFile=/etc/conf.d/factorio
 WorkingDirectory=/var/lib/factorio
-ExecStartPre=/bin/bash -c "[[ -f '${SAVE_NAME}.zip' ]] || /usr/bin/factorio --create '${SAVE_NAME}.zip'"
+ExecStartPre=/bin/bash -c "[[ -f '${SAVE_NAME}.zip' ]] || /usr/bin/factorio --create '${SAVE_NAME}.zip' $FACTORIO_CREATE_ARGS"
 ExecStart=/usr/bin/factorio --server-settings /etc/factorio/server-settings.json --start-server '${SAVE_NAME}.zip' $FACTORIO_EXTRA_ARGS
 TimeoutStopSec=30
 KillSignal=SIGINT
